--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,6 @@
+[server]
+headless = true
+enableCORS = false
 [theme]
 base="dark"
 primaryColor="#1f77b4"
@@ -5,3 +8,6 @@ backgroundColor="#0e1117"
 secondaryBackgroundColor="#262730"
 textColor="#FAFAFA"
 font="sans serif"
+[server]
+headless = true
+enableCORS = false
